--- a/netlify/functions/eleventy/test.njk
+++ b/netlify/functions/eleventy/test.njk
@@ -1,4 +1,19 @@
 ---
-myData: "Hello from Netlify Functions"
+localdata: "Hello from Netlify Functions"
 ---
-{{ myData }}
+<!doctype html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="">
+		<title></title>
+	</head>
+	<body>
+		{{ localdata }}
+    
+    {{ globaldata }}
+
+    {% include "include.njk" %}
+	</body>
+</html>
