--- a/src/sample-nunjucks.njk
+++ b/src/sample-nunjucks.njk
@@ -6,17 +6,14 @@ localdata: "Hello from Netlify Functions"
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="">
-		<title></title>
+		<meta name="description" content="This is a demo of running Eleventy in a serverless function.">
+		<title>Eleventy Cloud Demo</title>
 	</head>
 	<body>
-		{% if name %}Hello {{ name }}!!{% endif %}
+		<h1>{% if name %}Hello {{ name }}!!{% else %}Welcome{% endif %}</h1>
 
-		{{ localdata }}
-		
-		{{ globaldata }}
-
-
-		{% include "include.njk" %}
+		<p>{{ localdata }}</p>
+		<p>{{ globaldata }}</p>
+		<p>{% include "include.njk" %}</p>
 	</body>
 </html>
