--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="">
-		<title></title>
+		<meta name="description" content="This is a demo of running Eleventy in a serverless function.">
+		<title>Eleventy Serverless Demo</title>
 	</head>
 	<body>
 		{{ content | safe }}
