Update some comments

--- a/src/sample-nunjucks.njk
+++ b/src/sample-nunjucks.njk
@@ -22,6 +22,9 @@
 <p>{{ localdata }}</p>
 <p>{{ globaldata }}</p>
 <p>{% include "include.njk" %}</p>
+
+<h2><code>eleventy</code> Global Data Key:</h2>
+
 <pre>{{ eleventy | dump(2) }}</pre>
 
 <footer>
