--- a/src/sample-nunjucks.njk
+++ b/src/sample-nunjucks.njk
@@ -19,6 +19,7 @@
 </ul>
 
 <p>Now: {{ now }}</p>
+<p><code>page.date</code>: {{ page.date }}</p>
 <p>{{ localdata }}</p>
 <p>{{ globaldata }}</p>
 <p>{% include "include.njk" %}</p>
