--- a/src/sample-nunjucks.njk
+++ b/src/sample-nunjucks.njk
@@ -5,8 +5,8 @@
 	now: (new Date()).toISOString(),
 	permalink: {
 		build: "/",
-		serverless: "/:key/",
-		dynamic: "/:key/dynamic/",
+		serverless: "/:slug/",
+		dynamic: "/:slug/dynamic/",
 	}
 }
 ---
