--- a/src/sample-nunjucks.njk
+++ b/src/sample-nunjucks.njk
@@ -18,13 +18,17 @@
 	<li><a href="/this-can-be-anything/dynamic/">Template render on every request</a></li>
 </ul>
 
-<p>Now: {{ now }}</p>
 <p>{{ localdata }}</p>
 <p>{{ globaldata }}</p>
 <p>{% include "include.njk" %}</p>
 
-<h2><code>eleventy</code> Global Data Key:</h2>
+<h2><code>new Date()</code></h2>
+<pre>{{ now }}</pre>
 
+<h2><code>page</code> Data:</h2>
+<pre>{{ page | dump(2) }}</pre>
+
+<h2><code>eleventy</code> Data:</h2>
 <pre>{{ eleventy | dump(2) }}</pre>
 
 <footer>
