--- a/src/sample-nunjucks.njk
+++ b/src/sample-nunjucks.njk
@@ -40,3 +40,5 @@
 <footer>
 	<p>Using Eleventy {{ pkg.dependencies['@11ty/eleventy'] }}. <a href="https://github.com/11ty/demo-eleventy-serverless">Back to the <code>demo-eleventy-serverless</code> GitHub repo</a>.</p>
 </footer>
+
+{{ 1234567 | displayNumber }}
