Update this demo to stable version of Eleventy

--- a/src/sample-nunjucks.njk
+++ b/src/sample-nunjucks.njk
@@ -38,5 +38,5 @@
 </details>
 
 <footer>
-	<p>Using Eleventy {{ pkg.dependencies['@11ty/eleventy'] }}. <a href="https://github.com/11ty/demo-eleventy-serverless">Back to the <code>demo-eleventy-serverless</code> GitHub repo</a>.</p>
+	<p>Using Eleventy {{ eleventy.version }}. <a href="https://github.com/11ty/demo-eleventy-serverless">Back to the <code>demo-eleventy-serverless</code> GitHub repo</a>.</p>
 </footer>
