--- a/src/sample-nunjucks.njk
+++ b/src/sample-nunjucks.njk
@@ -32,6 +32,17 @@
 <h2><code>eleventy</code> Data:</h2>
 <pre>{{ eleventy | dump(2) }}</pre>
 
+<h2><code>collections</code></h2>
+
+<ul>
+{%- for name, collection in collections %}
+	{%- set size = collection | length %}
+	<li><code>{{ name }}</code>: {{ size }} file{% if size != 1 %}s{% endif %}</li>
+{%- endfor %}
+</ul>
+
+<p>Read more <a href="https://www.11ty.dev/docs/plugins/serverless/#collections-in-serverless">about collections in serverless</a>.</p>
+
 <details>
 	<summary><em>{{ page.inputPath }} Node.js fs stats</em></summary>
 	<pre>{{ page.inputPath | dateDebug | dump(2) }}</pre>
